samples/_failures_safe/1761160080_705bc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abd804a9.c: In function ‘main’:
./samples/SAFE/__tmp_abd804a9.c:167:9: error: expected declaration or statement at end of input
  167 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_abd804a9.c:167:9: error: expected declaration or statement at end of input
